Add entity classes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.password=localdev
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+# https://www.baeldung.com/hibernate-notnull-vs-nullable
+spring.jpa.properties.hibernate.validator.apply_to_ddl=false
