Move types.d.ts to where it could actually be useful.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
   },
   "include": [
     "frontend/**/*",
-    "types.d.ts"
+    "frontend/src/types.d.ts"
   ],
   "exclude": [
     "frontend/generated/jar-resources/**"
